Mejoras en página de misión e imagen adaptada, mejoras en el footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Inicio</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3 ">
 </head>
@@ -22,8 +22,8 @@
             <!-- Lista de navegación -->
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="categorias.html">Categorías</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="pages/categorias.html" >Categorías</a></li>
+                <li><a href="pages/reseñas.html">Reseñas</a></li>
                 <li><a href="#footer">Información Adicional</a></li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
                         Desde clásicos atemporales hasta las últimas novedades, tenemos algo especial para cada tipo de lector.
                         Explora nuestras categorías cuidadosamente organizadas y encuentra tu próxima gran lectura.
                     </p>
-                    <a href="categorias.html" class="cta-button">Explorar Catálogo</a>
+                    <a href="pages/categorias.html" class="cta-button">Explorar Catálogo</a>
                 </div>
             </div>
         </section>
@@ -58,7 +58,7 @@
 
                 <!-- Categoría: Literatura Contemporánea -->
                 <div class="categoria-card">
-                    <a href="categorias.html#literatura-contemporanea" class="categoria-link">
+                    <a href="pages/categorias.html#literatura-contemporanea" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/41aZrnvov1L.jpg?v=1747720614&width=990" alt="Literatura Contemporánea" class="categoria-img">
                         </div>
@@ -72,7 +72,7 @@
 
                 <!-- Categoría: Literatura Histórica -->
                 <div class="categoria-card">
-                    <a href="categorias.html#literatura-historica" class="categoria-link">
+                    <a href="pages/categorias.html#literatura-historica" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51udpdbi6mL.jpg?v=1745604319&width=990" alt="Literatura Histórica" class="categoria-img">
                         </div>
@@ -86,7 +86,7 @@
 
                 <!-- Categoría: Ficción Afroamericana -->
                 <div class="categoria-card">
-                    <a href="categorias.html#ficcion-afroamericana" class="categoria-link">
+                    <a href="pages/categorias.html#ficcion-afroamericana" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51gSloBtq0L.jpg?v=1736148004&width=990" alt="Ficción Afroamericana" class="categoria-img">
                         </div>
@@ -100,7 +100,7 @@
 
                 <!-- Categoría: Novelas Gráficas y Cómics -->
                 <div class="categoria-card">
-                    <a href="categorias.html#novelas-graficas" class="categoria-link">
+                    <a href="pages/categorias.html#novelas-graficas" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51boHj8x7vL_fc22898b-f15b-454c-90cd-628053e43afb.jpg?v=1736145118&width=990" alt="Novelas Gráficas" class="categoria-img">
                         </div>
@@ -114,7 +114,7 @@
 
                 <!-- Categoría: Ficción Internacional -->
                 <div class="categoria-card">
-                    <a href="categorias.html#ficcion-internacional" class="categoria-link">
+                    <a href="pages/categorias.html#ficcion-internacional" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/4174AJ-RtVL.jpg?v=1747058448&width=990" alt="Ficción Internacional" class="categoria-img">
                         </div>
@@ -128,7 +128,7 @@
 
                 <!-- Categoría: Ciencia Ficción y Fantasía -->
                 <div class="categoria-card">
-                    <a href="categorias.html#ciencia-ficcion" class="categoria-link">
+                    <a href="pages/categorias.html#ciencia-ficcion" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51YYB09ZfYL.jpg?v=1740535456&width=990" alt="Ciencia Ficción" class="categoria-img">
                         </div>
@@ -142,7 +142,7 @@
 
                 <!-- Categoría: Libros Infantiles -->
                 <div class="categoria-card">
-                    <a href="categorias.html#infantiles-juveniles" class="categoria-link">
+                    <a href="pages/categorias.html#infantiles-juveniles" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51zrujY2oaL.jpg?v=1751492717&width=990" alt="Libros Infantiles" class="categoria-img">
                         </div>
@@ -156,7 +156,7 @@
 
                 <!-- Categoría: No Ficción -->
                 <div class="categoria-card">
-                    <a href="categorias.html#no-ficcion" class="categoria-link">
+                    <a href="pages/categorias.html#no-ficcion" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/41yQYmGoutL.jpg?v=1744408410&width=990" alt="No Ficción" class="categoria-img">
                         </div>
@@ -170,7 +170,7 @@
 
                 <!-- Categoría: Filosofía y Religión -->
                 <div class="categoria-card">
-                    <a href="categorias.html#filosofia-religion" class="categoria-link">
+                    <a href="pages/categorias.html#filosofia-religion" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/41iLX5vhBgL.jpg?v=1736166207&width=990" alt="Filosofía y Religión" class="categoria-img">
                         </div>
@@ -184,7 +184,7 @@
 
                 <!-- Categoría: Cine y Artes -->
                 <div class="categoria-card">
-                    <a href="categorias.html#cine-artes" class="categoria-link">
+                    <a href="pages/categorias.html#cine-artes" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/51ml1LiKDCL.jpg?v=1749750558&width=990" alt="Cine y Artes" class="categoria-img">
                         </div>
@@ -198,7 +198,7 @@
 
                 <!-- Categoría: Misterio y Thriller -->
                 <div class="categoria-card">
-                    <a href="categorias.html#misterio-thriller" class="categoria-link">
+                    <a href="pages/categorias.html#misterio-thriller" class="categoria-link">
                         <div class="categoria-image">
                             <img src="https://shop.mtwyouth.org/cdn/shop/files/411S3xdv-tL.jpg?v=1741812754&width=990" alt="Misterio y Thriller" class="categoria-img">
                         </div>
@@ -239,8 +239,8 @@
                     Cada página es una nueva oportunidad de aprender, soñar y crecer.
                 </p>
                 <div class="cta-buttons">
-                    <a href="categorias.html" class="btn btn-primary">Ver Todas las Categorías</a>
-                    <a href="reseñas.html" class="btn btn-secondary">Leer Reseñas</a>
+                    <a href="pages/categorias.html" class="btn btn-primary">Ver Todas las Categorías</a>
+                    <a href="pages/reseñas.html" class="btn btn-secondary">Leer Reseñas</a>
                 </div>
             </div>
         </section>
@@ -258,15 +258,15 @@
                 <div class="footer-column">
                     <h5>SISTEC READ</h5>
                     <ul>
-                        <li><a href="acerca_de.html">NOSOTROS</a></li>
-                        <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                        <li><a href="pages/acerca_de.html">NOSOTROS</a></li>
+                        <li><a href="pages/ubicacion.html">UBICACIÓN</a></li>
                     </ul>
                 </div>
                 <!--Columnas para footer-->
                 <div class="footer-column">
                     <h5>SERVICIO AL CLIENTE</h5>
                     <ul>
-                        <li><a href="contactanos.html">CONTACTO</a></li>
+                        <li><a href="pages/contactanos.html">CONTACTO</a></li>
                         <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
                         <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
                     </ul>
@@ -275,16 +275,17 @@
                 <div class="footer-column">
                     <h5>SOBRE NOSOTROS</h5>
                     <ul>
-                        <li><a href="mision.html">MISIÓN</a> </li>
-                        <li><a href="vision.html">VISIÓN</a> </li>
-                        <li><a href="valores.html">VALORES</a> </li>
+                        <li><a href="pages/mision.html">MISIÓN</a> </li>
+                        <li><a href="pages/vision.html">VISIÓN</a> </li>
+                        <li><a href="pages/valores.html">VALORES</a> </li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h5>REDES</h5>
                     <ul>
-                        <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                        <li><a href="vision.html">VISIÓN</a> </li>
-                        <li><a href="valores.html">VALORES</a> </li>
+                        <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                        <li><a href="">Facebook</a></li>
+                        <li><a href="">Twitter</a></li>
                     </ul>
                 </div>
             </div>
