--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -15,7 +15,7 @@
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="active">Inicio</a></li>
+                    <li><a href="../index.html" class="active">Inicio</a></li>
                     <li><a href="categorias.html">Categorías</a></li>
                     <li><a href="reseñas.html">Reseñas</a></li>
                     <li><a href="#footer">Información Adicional</a></li>
@@ -28,30 +28,7 @@
         </div>
     </header>
 
-    <main>
-        <div class="container">
-            <section class="about-section">
-                <h1 class="page-title">Acerca de SISTEC READ</h1>
-                <article>
-                    <h2 class="categoria-titulo">Nuestra historia</h2>
-                    <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura: Gutiérrez Nuñez Alejandro, Guzmán Chablé Jeizer Oswaldo y Sánchez Villanueva Fernando de Jesús. Con la visión de fomentar el acceso al conocimiento, nuestros fundadores crearon una librería que combina un catálogo diverso con un compromiso profundo con la comunidad lectora de Chiapas. Actualmente, la librería es dirigida por Alejandro Gutiérrez Nuñez, quien actúa como director general, y administrada por Jeizer Guzmán Chablé, asegurando una gestión eficiente y un servicio de calidad para todos nuestros clientes.</p>
-                    <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Pila de libros en una librería" class="libro-imagen">
-                </article>
-
-                <aside>
-                    <h3>¿Por qué elegirnos?</h3>
-                    <ul>
-                        <li>Catálogo extenso de géneros literarios.</li>
-                        <li>Asesoría personalizada para encontrar tu próximo libro.</li>
-                        <li>Eventos culturales y talleres literarios.</li>
-                        <li>Precios justos y promociones especiales.</li>
-                    </ul>
-                </aside>
-            </section>
-        </div>
-    </main>
-
-    <!-- Pie de página con información adicional -->
+<!-- Pie de página con información adicional -->
     <section id="footer">
         <footer>
 
@@ -77,11 +54,19 @@
                     </div>
 
                     <div class="footer-column">
-                        <h5>Sobre nosotros</h5>
+                        <h5>SOBRE NOSOTROS</h5>
                         <ul>
                             <li><a href="mision.html">MISIÓN</a> </li>
                             <li><a href="vision.html">VISIÓN</a> </li>
                             <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
                         </ul>
                     </div>
                 </div>
@@ -90,9 +75,11 @@
                     <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                     <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
+
             </div>
         </footer>
     </section>
+
 </body>
 </html>
 
