--- a/pages/mision.html
+++ b/pages/mision.html
@@ -15,7 +15,7 @@
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="categorias.html">Categorías</a></li>
                     <li><a href="reseñas.html" class="active">Reseñas</a></li>
                     <li><a href="#footer">Informacion Adicional</a></li>
@@ -48,7 +48,6 @@
         </div>
     </main>
 
-
     <!-- Pie de página con información adicional -->
     <section id="footer">
         <footer>
@@ -75,11 +74,19 @@
                     </div>
 
                     <div class="footer-column">
-                        <h5>Sobre nosotros</h5>
+                        <h5>SOBRE NOSOTROS</h5>
                         <ul>
                             <li><a href="mision.html">MISIÓN</a> </li>
                             <li><a href="vision.html">VISIÓN</a> </li>
                             <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
                         </ul>
                     </div>
                 </div>
@@ -88,8 +95,10 @@
                     <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                     <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
+
             </div>
         </footer>
     </section>
+
 </body>
 </html>
