--- a/pages/vision.html
+++ b/pages/vision.html
@@ -15,7 +15,7 @@
                 <span>SISTEC READ</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="categorias.html">Categorías</a></li>
                 <li><a href="reseñas.html" class="active">Reseñas</a></li>
                 <li><a href="#footer">Informacion Adicional</a></li>
@@ -49,48 +49,57 @@
 </main>
 
 
-<!-- Pie de página con información adicional -->
-<section id="footer">
-    <footer>
+    <!-- Pie de página con información adicional -->
+    <section id="footer">
+        <footer>
 
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <!--Columnas para footer-->
-            <div class="footer-columns">
-                <div class="footer-column">
-                    <h5>SISTEC READ</h5>
-                    <ul>
-                        <li><a href="acerca_de.html">NOSOTROS</a></li>
-                        <li><a href="ubicacion.html">UBICACIÓN</a></li>
-                    </ul>
-                </div>
+            <div class="footer-container">
+                <h4>Información Adicional</h4>
                 <!--Columnas para footer-->
-                <div class="footer-column">
-                    <h5>SERVICIO AL CLIENTE</h5>
-                    <ul>
-                        <li><a href="contactanos.html">CONTACTO</a></li>
-                        <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
-                        <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
-                    </ul>
+                <div class="footer-columns">
+                    <div class="footer-column">
+                        <h5>SISTEC READ</h5>
+                        <ul>
+                            <li><a href="acerca_de.html">NOSOTROS</a></li>
+                            <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                        </ul>
+                    </div>
+                    <!--Columnas para footer-->
+                    <div class="footer-column">
+                        <h5>SERVICIO AL CLIENTE</h5>
+                        <ul>
+                            <li><a href="contactanos.html">CONTACTO</a></li>
+                            <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
+                            <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
+                        <h5>SOBRE NOSOTROS</h5>
+                        <ul>
+                            <li><a href="mision.html">MISIÓN</a> </li>
+                            <li><a href="vision.html">VISIÓN</a> </li>
+                            <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
+                        </ul>
+                    </div>
                 </div>
 
-                <div class="footer-column">
-                    <h5>Sobre nosotros</h5>
-                    <ul>
-                        <li><a href="mision.html">MISIÓN</a> </li>
-                        <li><a href="vision.html">VISIÓN</a> </li>
-                        <li><a href="valores.html">VALORES</a> </li>
-                    </ul>
+                <div class="footer-info">
+                    <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
+                    <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
-            </div>
 
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
             </div>
-        </div>
-    </footer>
-</section>
+        </footer>
+    </section>
 
 </body>
 </html>
