--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -21,8 +21,8 @@
                 
                 <!-- Lista de navegación -->
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="active">Inicio</a></li>
-                    <li><a href="categorias.html">Categorías</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="categorias.html" class="active">Categorías</a></li>
                     <li><a href="reseñas.html">Reseñas</a></li>
                     <li><a href="#footer">Información Adicional</a></li>
                 </ul>
@@ -752,6 +752,7 @@
     <!-- Pie de página con información adicional -->
     <section id="footer">
         <footer>
+
             <div class="footer-container">
                 <h4>Información Adicional</h4>
                 <!--Columnas para footer-->
@@ -781,14 +782,24 @@
                             <li><a href="valores.html">VALORES</a> </li>
                         </ul>
                     </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="footer-info">
                     <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                     <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
+
             </div>
         </footer>
     </section>
+
 </body>
 </html>
