--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,3 +1,4 @@
+git checkout main
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -17,7 +18,7 @@
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="categorias.html">Categorías</a></li>
                     <li><a href="reseñas.html" class="active">Reseñas</a></li>
                     <li><a href="#footer">Informacion Adicional</a></li>
