--- a/pages/reseñas.html
+++ b/pages/reseñas.html
@@ -14,9 +14,9 @@
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="active">Inicio</a></li>
+                    <li><a href="../index.html" >Inicio</a></li>
                     <li><a href="categorias.html">Categorías</a></li>
-                    <li><a href="reseñas.html">Reseñas</a></li>
+                    <li><a href="reseñas.html" class="active">Reseñas</a></li>
                     <li><a href="#footer">Información Adicional</a></li>
                 </ul>
             </div>
@@ -108,14 +108,24 @@
                             <li><a href="valores.html">VALORES</a> </li>
                         </ul>
                     </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="footer-info">
                     <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                     <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
+
             </div>
         </footer>
     </section>
+
 </body>
 </html>
