coloco logo y un solo tipo de letra en contacto y reseñas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="nav-container">
             <!-- Logotipo -->
             <div class="logo">
+                <img src="Images\new-log.png" class="logo-imagen">  
                 <h1>SISTEC READ</h1>
             </div>
 
@@ -37,7 +38,7 @@
         <section class="welcome-section">
             <div class="welcome-content">
                 <div class="welcome-image">
-                    <img src="../Images/fondo-header.jpeg" alt="Imagen de bienvenida" class="hero-image">
+                    <img src="Images/fondo-header.jpeg" alt="Imagen de bienvenida" class="hero-image">
                 </div>
                 <div class="welcome-text">
                     <h1 class="welcome-title">Bienvenido a nuestro catálogo online</h1>
