--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -16,6 +16,7 @@
             <div class="nav-container">
                 <!-- Logotipo -->
                 <div class="logo">
+                    <img src="..\Images\new-log.png" class="logo-imagen">
                     <span>SISTEC READ</span>
                 </div>
                 
