--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -15,6 +15,7 @@ git checkout main
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
+                    <img src="..\Images\new-log.png" class="logo-imagen">
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
@@ -104,11 +105,19 @@ git checkout main
                     </div>
 
                     <div class="footer-column">
-                        <h5>Sobre nosotros</h5>
+                        <h5>SOBRE NOSOTROS</h5>
                         <ul>
                             <li><a href="mision.html">MISIÓN</a> </li>
                             <li><a href="vision.html">VISIÓN</a> </li>
                             <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h5>REDES</h5>
+                        <ul>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
                         </ul>
                     </div>
                 </div>
@@ -117,8 +126,9 @@ git checkout main
                     <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                     <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
                 </div>
+
             </div>
         </footer>
     </section>
-</body>
+
 </html>
