--- a/pages/mision.html
+++ b/pages/mision.html
@@ -12,6 +12,7 @@
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
+                    <img src="..\Images\new-log.png" class="logo-imagen">
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
