--- a/pages/reseñas.html
+++ b/pages/reseñas.html
@@ -11,6 +11,7 @@
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
+                    <img src="..\Images\new-log.png" class="logo-imagen">  
                     <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
@@ -21,10 +22,6 @@
                 </ul>
             </div>
         </nav>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
     </header>
 
     <main>
