--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -14,6 +14,7 @@
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
+                <img src="..\Images\new-log.png" class="logo-imagen">
                 <span>SISTEC READ</span>
             </div>
             <ul class="nav-menu">
