--- a/pages/valores.html
+++ b/pages/valores.html
@@ -11,6 +11,7 @@
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
+                <img src="..\Images\new-log.png" class="logo-imagen">
                 <span>SISTEC READ</span>
             </div>
             <ul class="nav-menu">
