Agregacion de variables y cambios en el nav

--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Catálogo de Libros</title>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3 "> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
     <!-- Encabezado con barra de navegación y logotipo -->
@@ -786,9 +786,9 @@
                     <div class="footer-column">
                         <h5>REDES</h5>
                         <ul>
-                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                         </ul>
                     </div>
                 </div>
