--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -6,7 +6,6 @@
     <title>SISTEC READ - Ubicación</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3">
 </head>
 <body>
 <header>
@@ -25,10 +24,7 @@
             </ul>
         </div>
     </nav>
-    <div class="search-container">
-        <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-        <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-    </div>
+
 </header>
 
 <main>
@@ -124,9 +120,9 @@
                     <div class="footer-column">
                         <h5>REDES</h5>
                         <ul>
-                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                         </ul>
                     </div>
                 </div>
