--- a/pages/vision.html
+++ b/pages/vision.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Visión</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
 <header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
@@ -23,11 +23,6 @@
             </ul>
         </div>
     </nav>
-    <!-- Buscador con botón de buscar -->
-    <div class="search-container">
-        <input type="search" placeholder="Buscar libros por título o autor..." class="search-input" id="searchInput">
-        <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-    </div>
 </header>
 
 <main>
@@ -86,9 +81,9 @@
                     <div class="footer-column">
                         <h5>REDES</h5>
                         <ul>
-                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                         </ul>
                     </div>
                 </div>
