--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -284,9 +285,9 @@
                 <div class="footer-column">
                     <h5>REDES</h5>
                     <ul>
-                        <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                        <li><a href="">Facebook</a></li>
-                        <li><a href="">Twitter</a></li>
+                        <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw==" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                     </ul>
                 </div>
             </div>
