--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Acerca de</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <header>
         <nav class="main-nav">
@@ -23,11 +25,30 @@
                 </ul>
             </div>
         </nav>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
     </header>
+
+    <main>
+        <div class="container">
+            <section class="about-section">
+                <h1 class="page-title">Acerca de SISTEC READ</h1>
+                <article>
+                    <h2 class="categoria-titulo">Nuestra historia</h2>
+                    <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura: Gutiérrez Nuñez Alejandro, Guzmán Chablé Jeizer Oswaldo y Sánchez Villanueva Fernando de Jesús. Con la visión de fomentar el acceso al conocimiento, nuestros fundadores crearon una librería que combina un catálogo diverso con un compromiso profundo con la comunidad lectora de Chiapas. Actualmente, la librería es dirigida por Alejandro Gutiérrez Nuñez, quien actúa como director general, y administrada por Jeizer Guzmán Chablé, asegurando una gestión eficiente y un servicio de calidad para todos nuestros clientes.</p>
+                    <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Pila de libros en una librería" class="libro-imagen">
+                </article>
+
+                <aside>
+                    <h3>¿Por qué elegirnos?</h3>
+                    <ul>
+                        <li>Catálogo extenso de géneros literarios.</li>
+                        <li>Asesoría personalizada para encontrar tu próximo libro.</li>
+                        <li>Eventos culturales y talleres literarios.</li>
+                        <li>Precios justos y promociones especiales.</li>
+                    </ul>
+                </aside>
+            </section>
+        </div>
+    </main>
 
 <!-- Pie de página con información adicional -->
     <section id="footer">
@@ -65,9 +86,9 @@
                     <div class="footer-column">
                         <h5>REDES</h5>
                         <ul>
-                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                         </ul>
                     </div>
                 </div>
