--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,4 +1,3 @@
-git checkout main
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,6 +5,7 @@ git checkout main
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Contáctanos</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -26,10 +26,7 @@ git checkout main
                 </ul>
             </div>
         </nav>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar libros por título o autor..." class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
+
     </header>
 
     <main>
@@ -64,13 +61,13 @@ git checkout main
                 <aside>
                     <h3>Otras formas de contacto</h3>
                     <ul>
-                        <li><strong>Correo:</strong> <a href="mailto:info@sistecread.com">info@sistecread.com</a></li>
-                        <li><strong>Teléfono:</strong> <a href="tel:+529611234567">+52 (961) 123-4567</a></li>
-                        <li><strong>Redes sociales:</strong>
+                        <li><strong>Correo:</strong> <a href="#"><i class="fas fa-envelope"></i> info@sistecread.com</a></li>
+                        <li><strong>Teléfono:</strong> <a href="#">+52 (961) 123-4567</a></li>
+                        <li><strong>Contacto por áreas:</strong>
                             <ul>
-                                <li><a href="https://facebook.com/sistecread" target="_blank">Facebook</a></li>
-                                <li><a href="https://twitter.com/sistecread" target="_blank">Twitter</a></li>
-                                <li><a href="https://instagram.com/sistecread" target="_blank">Instagram</a></li>
+                                <li><strong>Ventas:</strong> <a href="#"><i class="fas fa-envelope"></i> ventas@sistercead.com</a></li>
+                                <li><strong>Soporte técnico:</strong> <a href="#"><i class="fas fa-envelope"></i> soporte@sistercead.com</a></li>
+                                <li><strong>Facturación:</strong> <a href="#"><i class="fas fa-envelope"></i> facturacion@sistercead.com</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -115,9 +112,9 @@ git checkout main
                     <div class="footer-column">
                         <h5>REDES</h5>
                         <ul>
-                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                  
-                            <li><a href="">Facebook</a></li>
-                            <li><a href="">Twitter</a></li>
+                            <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>
+                            <li><a href="https://www.facebook.com/sistec.read"><i class="fab fa-facebook"></i> Facebook</a></li>
+                            <li><a href="https://twitter.com/sistec_read"><i class="fab fa-twitter"></i> Twitter</a></li>
                         </ul>
                     </div>
                 </div>
@@ -130,5 +127,6 @@ git checkout main
             </div>
         </footer>
     </section>
+    </body>
 
 </html>
